Updated to include Canada

--- a/Google_Ads_Trend_Reporting.ipynb
+++ b/Google_Ads_Trend_Reporting.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPp3jqeZbSI1g3hZ4hQ12Z",
+      "authorship_tag": "ABX9TyPBuDLPbjbk1RZiGWQJv8zG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,11 +154,23 @@
         "US_STATES = [\n",
         "  \"Alabama\", \"Alaska\", \"Arizona\", \"Arkansas\", \"California\", \"Colorado\", \"Connecticut\", \"Delaware\", \"Florida\", \"Georgia\", \"Hawaii\", \"Idaho\", \"Illinois\", \"Indiana\", \"Iowa\", \"Kansas\", \"Kentucky\", \"Louisiana\", \"Maine\", \"Maryland\", \"Massachusetts\", \"Michigan\", \"Minnesota\", \"Mississippi\", \"Missouri\", \"Montana\", \"Nebraska\", \"Nevada\", \"New Hampshire\", \"New Jersey\", \"New Mexico\", \"New York\", \"North Carolina\", \"North Dakota\", \"Ohio\", \"Oklahoma\", \"Oregon\", \"Pennsylvania\", \"Rhode Island\", \"South Carolina\", \"South Dakota\", \"Tennessee\", \"Texas\", \"Utah\", \"Vermont\", \"Virginia\", \"Washington\", \"West Virginia\", \"Wisconsin\", \"Wyoming\"\n",
         "]\n",
-        "LOCATIONS_TO_CHECK = [\n",
-        "  \"United States\",\n",
-        "  \"Alabama\", \"Alaska\", \"Arizona\", \"Arkansas\", \"California\", \"Colorado\", \"Connecticut\", \"Delaware\", \"Florida\", \"Georgia\", \"Hawaii\", \"Idaho\", \"Illinois\", \"Indiana\", \"Iowa\", \"Kansas\", \"Kentucky\", \"Louisiana\", \"Maine\", \"Maryland\", \"Massachusetts\", \"Michigan\", \"Minnesota\", \"Mississippi\", \"Missouri\", \"Montana\", \"Nebraska\", \"Nevada\", \"New Hampshire\", \"New Jersey\", \"New Mexico\", \"New York\", \"North Carolina\", \"North Dakota\", \"Ohio\", \"Oklahoma\", \"Oregon\", \"Pennsylvania\", \"Rhode Island\", \"South Carolina\", \"South Dakota\", \"Tennessee\", \"Texas\", \"Utah\", \"Vermont\", \"Virginia\", \"Washington\", \"West Virginia\", \"Wisconsin\", \"Wyoming\",\n",
+        "\n",
+        "US_CITIES = [\n",
         "  \"New York, NY\", \"Los Angeles, CA\", \"Chicago, IL\", \"Houston, TX\", \"Phoenix, AZ\", \"Philadelphia, PA\", \"San Antonio, TX\", \"San Diego, CA\", \"Dallas, TX\", \"Jacksonville, FL\", \"Fort Worth, TX\", \"San Jose, CA\", \"Austin, TX\", \"Charlotte, NC\", \"Columbus, OH\", \"Indianapolis, IN\", \"San Francisco, CA\", \"Seattle, WA\", \"Denver, CO\", \"Oklahoma City, OK\", \"Nashville, TN\", \"Washington, DC\", \"El Paso, TX\", \"Las Vegas, NV\", \"Boston, MA\", \"Detroit, MI\", \"Louisville, KY\", \"Portland, OR\", \"Memphis, TN\", \"Baltimore, MD\", \"Milwaukee, WI\", \"Albuquerque, NM\", \"Tucson, AZ\", \"Fresno, CA\", \"Sacramento, CA\", \"Atlanta, GA\", \"Mesa, AZ\", \"Kansas City, MO\", \"Raleigh, NC\", \"Colorado Springs, CO\", \"Omaha, NE\", \"Miami, FL\", \"Virginia Beach, VA\", \"Long Beach, CA\", \"Oakland, CA\", \"Minneapolis, MN\", \"Bakersfield, CA\", \"Tulsa, OK\", \"Tampa, FL\", \"Arlington, TX\", \"Aurora, CO\", \"Wichita, KS\", \"Cleveland, OH\", \"New Orleans, LA\", \"Henderson, NV\", \"Honolulu, HI\", \"Anaheim, CA\", \"Orlando, FL\", \"Lexington, KY\", \"Stockton, CA\", \"Riverside, CA\", \"Irvine, CA\", \"Corpus Christi, TX\", \"Newark, NJ\", \"Santa Ana, CA\", \"Cincinnati, OH\", \"Pittsburgh, PA\", \"Saint Paul, MN\", \"Greensboro, NC\", \"Jersey City, NJ\", \"Durham, NC\", \"Lincoln, NE\", \"North Las Vegas, NV\", \"Plano, TX\", \"Anchorage, AK\", \"Gilbert, AZ\", \"Madison, WI\", \"Reno, NV\", \"Chandler, AZ\", \"St. Louis, MO\", \"Chula Vista, CA\", \"Buffalo, NY\", \"Fort Wayne, IN\", \"Lubbock, TX\", \"St. Petersburg, FL\", \"Toledo, OH\", \"Laredo, TX\", \"Port St. Lucie, FL\", \"Glendale, AZ\", \"Irving, TX\", \"Winston-Salem, NC\", \"Chesapeake, VA\", \"Garland, TX\", \"Scottsdale, AZ\", \"Boise, ID\", \"Hialeah, FL\", \"Frisco, TX\", \"Richmond, VA\", \"Cape Coral, FL\", \"Norfolk, VA\", \"Spokane, WA\", \"Huntsville, AL\", \"Santa Clarita, CA\", \"Tacoma, WA\", \"Fremont, CA\", \"McKinney, TX\", \"San Bernardino, CA\", \"Baton Rouge, LA\", \"Modesto, CA\", \"Fontana, CA\", \"Salt Lake City, UT\", \"Moreno Valley, CA\", \"Des Moines, IA\", \"Worcester, MA\", \"Yonkers, NY\", \"Fayetteville, NC\", \"Sioux Falls, SD\", \"Grand Prairie, TX\", \"Rochester, NY\", \"Tallahassee, FL\", \"Little Rock, AR\", \"Amarillo, TX\", \"Overland Park, KS\", \"Columbus, GA\", \"Augusta, GA\", \"Mobile, AL\", \"Oxnard, CA\", \"Grand Rapids, MI\", \"Peoria, AZ\", \"Vancouver, WA\", \"Knoxville, TN\", \"Birmingham, AL\", \"Montgomery, AL\", \"Providence, RI\", \"Huntington Beach, CA\", \"Brownsville, TX\", \"Chattanooga, TN\", \"Fort Lauderdale, FL\", \"Tempe, AZ\", \"Akron, OH\", \"Glendale, CA\", \"Clarksville, TN\", \"Ontario, CA\", \"Newport News, VA\", \"Elk Grove, CA\", \"Cary, NC\", \"Aurora, IL\", \"Salem, OR\", \"Pembroke Pines, FL\", \"Eugene, OR\", \"Santa Rosa, CA\", \"Rancho Cucamonga, CA\", \"Shreveport, LA\", \"Garden Grove, CA\", \"Oceanside, CA\", \"Fort Collins, CO\", \"Springfield, MO\", \"Murfreesboro, TN\", \"Surprise, AZ\", \"Lancaster, CA\", \"Denton, TX\", \"Roseville, CA\", \"Palmdale, CA\", \"Corona, CA\", \"Salinas, CA\", \"Killeen, TX\", \"Paterson, NJ\", \"Alexandria, VA\", \"Hollywood, FL\", \"Hayward, CA\", \"Charleston, SC\", \"Macon, GA\", \"Lakewood, CO\", \"Sunnyvale, CA\", \"Kansas City, KS\", \"Springfield, MA\", \"Bellevue, WA\", \"Naperville, IL\", \"Joliet, IL\", \"Bridgeport, CT\", \"Mesquite, TX\", \"Pasadena, TX\", \"Olathe, KS\", \"Escondido, CA\", \"Savannah, GA\", \"McAllen, TX\", \"Gainesville, FL\", \"Pomona, CA\", \"Rockford, IL\", \"Thornton, CO\", \"Waco, TX\", \"Visalia, CA\", \"Syracuse, NY\", \"Columbia, SC\", \"Midland, TX\", \"Miramar, FL\", \"Palm Bay, FL\", \"Lakewood,NJ\", \"Jackson, MS\", \"Coral Springs, FL\", \"Victorville, CA\", \"Elizabeth, NJ\", \"Fullerton, CA\", \"Meridian, ID\", \"Torrance, CA\", \"Stamford, CT\", \"West Valley City, UT\", \"Orange, CA\", \"Cedar Rapids, IA\", \"Warren, MI\", \"Hampton, VA\", \"New Haven, CT\", \"Pasadena, CA\", \"Kent, WA\", \"Dayton, OH\", \"Fargo, ND\", \"Lewisville, TX\", \"Carrollton, TX\", \"Round Rock, TX\", \"Sterling Heights, MI\", \"Santa Clara, CA\", \"Norman, OK\", \"Columbia, MO\", \"Abilene, TX\", \"Pearland, TX\", \"Athens, GA\", \"College Station, TX\", \"Clovis, CA\", \"West Palm Beach, FL\", \"Allentown, PA\", \"North Charleston, SC\", \"Simi Valley, CA\", \"Topeka, KS\", \"Wilmington, NC\", \"Lakeland, FL\", \"Thousand Oaks, CA\", \"Concord, CA\", \"Rochester, MN\", \"Vallejo, CA\", \"Ann Arbor, MI\", \"Broken Arrow, OK\", \"Fairfield, CA\", \"Lafayette, LA\", \"Hartford, CT\", \"Arvada, CO\", \"Berkeley, CA\", \"Independence, MO\", \"Billings, MT\", \"Cambridge, MA\", \"Lowell, MA\", \"Odessa, TX\", \"High Point, NC\", \"League City, TX\", \"Antioch, CA\", \"Richardson, TX\", \"Goodyear, AZ\", \"Pompano Beach, FL\", \"Nampa, ID\", \"Menifee, CA\", \"Las Cruces, NM\", \"Clearwater, FL\", \"West Jordan, UT\", \"New Braunfels, TX\", \"Manchester, NH\", \"Miami Gardens, FL\", \"Waterbury, CT\", \"Provo, UT\", \"Evansville, IN\", \"Richmond, CA\", \"Westminster, CO\", \"Elgin, IL\", \"Conroe, TX\", \"Greeley, CO\", \"Lansing, MI\", \"Buckeye, AZ\", \"Tuscaloosa, AL\", \"Allen, TX\", \"Carlsbad, CA\", \"Everett, WA\", \"Springfield,IL\", \"Beaumont, TX\", \"Murrieta, CA\", \"Rio Rancho, NM\", \"Temecula, CA\", \"Concord, NC\", \"Tyler, TX\", \"Davie, FL\", \"South Fulton, GA\", \"Peoria, IL\", \"Sparks, NV\", \"Gresham, OR\", \"Santa Maria, CA\", \"Pueblo, CO\", \"Hillsboro, OR\", \"Edison, NJ\", \"Sugar Land, TX\", \"Ventura, CA\", \"Downey, CA\", \"Costa Mesa, CA\", \"Centennial, CO\", \"Edinburg, TX\", \"Spokane Valley, WA\", \"Jurupa Valley, CA\", \"Bend, OR\", \"West Covina, CA\", \"Boulder, CO\", \"Palm Coast, FL\", \"Lee's Summit, MO\", \"Dearborn, MI\", \"Green Bay, WI\", \"St. George, UT\", \"Woodbridge, NJ\", \"Brockton, MA\", \"Renton, WA\", \"Sandy Springs, GA\", \"Rialto, CA\", \"El Monte, CA\", \"Vacaville, CA\", \"Fishers, IN\", \"South Bend, IN\", \"Carmel, IN\", \"Yuma, AZ\", \"Burbank, CA\", \"Lynn, MA\", \"Quincy, MA\", \"El Cajon, CA\", \"Fayetteville, AR\", \"Suffolk, VA\", \"San Mateo, CA\", \"Chico, CA\", \"Inglewood, CA\", \"Wichita Falls, TX\", \"Boca Raton, FL\", \"Hesperia, CA\", \"Daly City, CA\", \"Clinton, MI\", \"Georgetown, TX\", \"New Bedford, MA\", \"Albany, NY\", \"Davenport, IA\", \"Plantation, FL\", \"Deltona, FL\", \"Federal Way, WA\", \"San Angelo, TX\", \"Tracy, CA\", \"Sunrise, FL\"\n",
         "]\n",
+        "\n",
+        "CA_PROVINCES = [\"Alberta\", \"British Columbia\", \"Ontario\", \"Quebec\", \"Manitoba\", \"New Brunswick\", \"Newfoundland and Labrador\", \"Nova Scotia\", \"Prince Edward Island\", \"Saskatchewan\"]\n",
+        "\n",
+        "CA_LOCATIONS = [ \"Winnipeg, Manitoba\", \"Dieppe, New Brunswick\", \"Fredericton, New Brunswick\", \"Greater Lakeburn, New Brunswick\", \"Moncton, New Brunswick\", \"Saint John, New Brunswick\", \"Dartmouth, Nova Scotia\", \"Halifax, Nova Scotia\", \"Aurora, Ontario\", \"Barrie, Ontario\", \"Bowmanville, Ontario\", \"Chatham, Ontario\", \"Collingwood, Ontario\", \"East Gwillimbury, Ontario\", \"Goderich, Ontario\", \"Holland Landing, Ontario\", \"Leamington, Ontario\", \"London, Ontario\", \"Midland, Ontario\", \"Mississauga, Ontario\", \"Newmarket, Ontario\", \"Niagara Falls, Ontario\", \"North York, Ontario\", \"Oakville, Ontario\", \"Ottawa, Ontario\", \"Peterborough, Ontario\", \"Port Carling, Ontario\", \"Queensville, Ontario\", \"Richmond Hill, Ontario\", \"Seguin, Ontario\", \"St. Catharines, Ontario\", \"St. Marys, Ontario\", \"Sudbury, Ontario\", \"Thunder Bay, Ontario\", \"Toronto, Ontario\", \"Waterloo, Ontario\", \"Welland, Ontario\", \"Guelph, Ontario\", \"Scarborough, Ontario\"]\n",
+        "\n",
+        "LOCATIONS_TO_CHECK = (\n",
+        "    [\"United States\"]\n",
+        "    + US_STATES\n",
+        "    + US_CITIES\n",
+        "    + [\"Canada\"]\n",
+        "    + CA_PROVINCES\n",
+        "    + CA_LOCATIONS\n",
+        ")\n",
         "\n",
         "# ==============================================================================\n",
         "# SECTION 4: CORE LOGIC & HELPER FUNCTIONS\n",
@@ -476,10 +488,22 @@
         "\n",
         "    for i, location_name_str in enumerate(LOCATIONS_TO_CHECK):\n",
         "\n",
-        "        if location_name_str == \"United States\":\n",
+        "        # Determine the fully qualified location name for the API\n",
+        "        if location_name_str in US_CITIES or location_name_str in CA_LOCATIONS:\n",
+        "            # Already fully qualified, e.g., \"Los Angeles, CA\" or \"Toronto, Ontario\"\n",
+        "            qualified_location_name = location_name_str\n",
+        "        elif location_name_str in US_STATES:\n",
+        "            # e.g., \"California\" -> \"California, United States\"\n",
+        "            qualified_location_name = f\"{location_name_str}, United States\"\n",
+        "        elif location_name_str in CA_PROVINCES:\n",
+        "            # e.g., \"Ontario\" -> \"Ontario, Canada\"\n",
+        "            qualified_location_name = f\"{location_name_str}, Canada\"\n",
+        "        elif location_name_str == \"United States\" or location_name_str == \"Canada\":\n",
+        "            # Whole country\n",
         "            qualified_location_name = location_name_str\n",
         "        else:\n",
-        "            qualified_location_name = f\"{location_name_str}, United States\"\n",
+        "            # Should not be reached, but as a fallback, use the name as is\n",
+        "            qualified_location_name = location_name_str\n",
         "\n",
         "        print(f\"\\n--- Processing Location ({i+1}/{len(LOCATIONS_TO_CHECK)}): {location_name_str} (as '{qualified_location_name}') ---\")\n",
         "\n",
@@ -5858,11 +5882,11 @@
         "# are defined in a previously executed cell before running this.\n",
         "\n",
         "def create_state_summary_sheet(spreadsheet_url):\n",
-        "    \"\"\"\n",
+        "    \"\n",
         "    Creates/updates a 'StateSummary' sheet with states as rows and months as columns.\n",
         "    It now intelligently appends summary columns for 1, 3, 6, 12, and 24-month\n",
         "    change and percentage change, based on the available data.\n",
-        "    \"\"\"\n",
+        "    \"\n",
         "    print(\"\\n--- Creating/Updating State Summary Sheet (with Change Analysis) ---\")\n",
         "    try:\n",
         "        spreadsheet = gc.open_by_url(spreadsheet_url)\n",
@@ -6052,7 +6076,7 @@
         "# ------------------------------------\n",
         "\n",
         "def test_api_response_and_save(test_keyword: str, test_location_name: str, output_filename=\"raw_api_test_response.txt\"): # Changed default extension to .txt\n",
-        "    \"\"\"\n",
+        "    \"\n",
         "    Makes a single Google Ads API call for a specific keyword and location,\n",
         "    and saves the raw API response's string representation to a text file for debugging.\n",
         "\n",
@@ -6060,7 +6084,7 @@
         "        test_keyword (str): The single keyword to test.\n",
         "        test_location_name (str): The location name (e.g., \"United States\", \"Kansas\").\n",
         "        output_filename (str): The name of the text file to save the response to.\n",
-        "    \"\"\"\n",
+        "    \"\n",
         "    print(f\"\\n--- Running Standalone API Test for Keyword: '{test_keyword}' in '{test_location_name}' ---\")\n",
         "\n",
         "    google_ads_client_local = None\n",
